fix: configApiPopup rename

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -116,7 +116,7 @@ code {
   cursor: pointer;
 }
 
-.configApiPoppup {
+.configApiPopup {
   position: fixed;
   margin: auto;
   z-index: 999;
